--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,17 +7,22 @@ layout: default
 {% assign return_url = baseurl | append: fragment %}
 
 <nav class="navbar flex-row navbar-toggleable-md navbar-light bg-faded">
-  <ul class="navbar-nav mr-auto">
+  <ul class="navbar-nav">
     <li class="nav-item hub-brand">
       <a class="nav-link" href="{{ return_url }}">Hub</a>
     </li>
+    <li class="nav-item org-brand">
+      {% if site.organization_brand_header != "" or site.organization_name != "" %}
+        <a class="nav-link navbar-brand" href="{{ site.organization_url | default: return_url }}">
+          {{ site.organization_brand_header | default: site.organization_name }}
+        </a>
+      {% endif %}
+    </li>
+    <li class="nav-item search">
+      <a class="nav-link" href="{{ return_url }}"><i class="fa fa-search"></i> Search</a>
+    </li>
   </ul>
 
-  {% if site.organization_brand_header != "" or site.organization_name != "" %}
-    <a class="navbar-brand" href="{{ site.organization_url | default: return_url }}">
-      {{ site.organization_brand_header | default: site.organization_name }}
-    </a>
-  {% endif %}
 </nav>
 
 {{ content }}
