--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cookie|Raleway:600" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/font-awesome/css/font-awesome.min.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/quick-switcher/quick-switcher.css" | relative_url }}">
 
   {% assign environment = jekyll.environment | replace: 'production', 'prod' %}
   {% if environment == "prod" and site.google_analytics %}
