--- a/assets/main.css
+++ b/assets/main.css
@@ -305,10 +305,16 @@ body.hub-cover {
 }
 
 .hub .nav-item.search {
-  text-align: center;
+  text-align: right;
   min-width: 45%;
   margin-top: -.1em;
   margin-left: .5em;
+  flex-grow: 1;
+}
+
+.hub .nav-item.org-brand + .nav-item.search {
+  text-align: center;
+  flex-grow: 0;
 }
 
 @media (min-width: 350px) {
