Add holidays card to upcoming events

--- a/assets/main.css
+++ b/assets/main.css
@@ -406,3 +406,11 @@ body.hub-cover {
 .hub .table-app-accounts th + th + th {
   width: 60%;
 }
+
+.hub .table-holidays th {
+  width: 40%;
+}
+
+.hub .table-holidays th + th {
+  width: 60%;
+}
