--- a/_includes/resource_cards.html
+++ b/_includes/resource_cards.html
@@ -20,6 +20,8 @@
             {% assign include_file = "resource_icon_card.html" %}
             {% if card.layout == 'event-details' %}
               {% assign include_file = "resource_icon_card_event.html" %}
+            {% elsif card.layout == 'holidays' %}
+              {% assign include_file = "resource_icon_card_holidays.html" %}
             {% endif %}
 
             {% assign bg_color = card.bg_color | default: include.bg_color %}
