--- a/_includes/resource_cards.html
+++ b/_includes/resource_cards.html
@@ -10,6 +10,7 @@
       <div class="row">
         {% for card in cards %}
           {% if card.title != "" and card.title != nil %}
+            {% assign footer = '' %}
             {% assign relative_link = card.relative_link | default: '' %}
             {% assign page_content = card.content | strip %}
             {% assign has_content = page_content != '' or card.subcards.length > 0 %}
@@ -22,12 +23,18 @@
               {% assign include_file = "resource_icon_card_event.html" %}
             {% elsif card.layout == 'holidays' %}
               {% assign include_file = "resource_icon_card_holidays.html" %}
+            {% elsif card.type == 'payroll-dates' and card.payroll_date != nil %}
+              {% capture footer %}
+                <b>Next Paydate</b>
+                <span class="float-right paydate" data-payroll-date="{{ card.payroll_date | jsonify  | replace: '"', '&quot;' }}">
+                </span>
+              {% endcapture %}
             {% endif %}
 
             {% assign bg_color = card.bg_color | default: include.bg_color %}
             {% assign fg_color = card.fg_color | default: include.fg_color %}
 
-            {% include {{ include_file }} link=card.link relative_link=relative_link icon=card.icon bg_color=bg_color fg_color=fg_color title=card.title description=card.description resource=card %}
+            {% include {{ include_file }} link=card.link relative_link=relative_link icon=card.icon bg_color=bg_color fg_color=fg_color title=card.title description=card.description resource=card footer=footer %}
           {% endif %}
 
         {% endfor %}
